# wormhole-dss-operator

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  config.json  dist-workspace.toml  docker-compose.yml  prometheus.yml
.github/: ci.yml
abi/: ERC20Mintable.json  Vault.json  wormhole.json  wormholeDSS.json
src/: constants.rs  contracts.rs  error.rs  events.rs  keypair.rs  lib.rs  main.rs  p2p.rs  register.rs  server.rs  table.rs  utils.rs
