[package]
name = "wormhole-operator"
version = "0.0.1"
edition = "2021"
rust-version = "1.79.0"
license = "BUSL-1.1"
repository = "https://github.com/karak-network/wormhole-dss-operator"

[dependencies]

eyre = "0.6"
futures = "0.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rpassword = "7.3.1"
libp2p = "0.54.1"
aws-config = "1.5.6"

tokio-stream = "0.1"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
tempfile = "3"
base64 = "0.22.1"
serde = "1.0.210"
serde_json = "1.0.128"
axum = "0.7.5"
alloy = { version = "0.3.3", features = [
   "full",
    "signer-aws",
    "signer-keystore",
    "providers",
    "rpc",
    "rpc-types",
    "rpc-types-trace"
] }
tower = "0.5.1"
dotenvy = "0.15.7"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.20", features = ["color", "derive", "env"] }

ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
alloy-signer-aws = "0.3.6"
aws-sdk-kms = "1.44.0"
thiserror = "1.0.64"
bs58 = "0.5.1"
axum-macros = "0.4.2"
tracing = "0.1.40"
envy = "0.4.2"
karak-rs = "0.2.2"
ethers-core = "2.0.14"
metrics = "0.24.0"
metrics-exporter-prometheus = "0.16.0"
rustls = { version = "0.23.18", features = ["ring"] }

[[bin]]
name = "wormhole-operator"
path = "src/main.rs"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
